[package]
name = "audio_lenz"
version = "0.1.0"
authors = ["ank3r <mwangishadrack5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "^0.13"
tokio = { version = "0.2", features = ["full"]}
hyper-rustls = "^0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"